// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeroLayout /> compare with loading snapshot matches with snapshot 1`] = `
.c0 {
  --container-padding: 1.25rem;
  display: block;
}

.c0 .k-HeroLayout__hero {
  position: relative;
  padding: 8.4375rem var(--container-padding) 6.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 1.5625rem;
}

.c0 .k-HeroLayout__hero__background {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 18.75rem;
  background-color: var(--color-grey-000);
}

.c0 .k-HeroLayout__hero__background img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.c0 .k-HeroLayout__hero__background::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50%;
  background: linear-gradient( to bottom,hsla(0deg,0%,100%,0),hsla(0deg,0%,100%,0.3) 20%,hsla(0deg,0%,100%,0.9) 60%,var(--color-grey-000) );
}

.c0 .k-HeroLayout__hero__block {
  position: relative;
  z-index: 2;
  text-align: center;
}

.c0 .k-HeroLayout__promo {
  background-color: var(--color-grey-200);
  padding: 3.125rem var(--container-padding) 3.125rem;
}

.c0 .k-HeroLayout__page {
  margin: 0 var(--container-padding) 3.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 3.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.3125rem;
  line-height: 1;
  gap: 0.125rem;
}

.c2 .k-Loader__circle {
  width: 0.3125rem;
  height: 0.3125rem;
  border-radius: var(--border-radius-rounded);
  -webkit-animation: k-Loader-animation-scale 1.75s 0s infinite cubic-bezier(0.2,0.68,0.18,1.08);
  animation: k-Loader-animation-scale 1.75s 0s infinite cubic-bezier(0.2,0.68,0.18,1.08);
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2 .k-Loader__circle:nth-child(1) {
  -webkit-animation-delay: calc(-1.75s / 3);
  animation-delay: calc(-1.75s / 3);
}

.c2 .k-Loader__circle:nth-child(2) {
  -webkit-animation-delay: calc(-1.75s / 3 / 2);
  animation-delay: calc(-1.75s / 3 / 2);
}

.c2 .k-Loader__circle:nth-child(3) {
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 .k-Grid__col {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
}

.c1 .k-Grid__col--0 {
  -webkit-flex-basis: calc((100% / 12) * 0);
  -ms-flex-preferred-size: calc((100% / 12) * 0);
  flex-basis: calc((100% / 12) * 0);
  max-width: calc((100% / 12) * 0);
}

.c1 .k-Grid__col--offset-0 {
  margin-left: calc((100% / 12) * 0);
}

.c1 .k-Grid__col--1 {
  -webkit-flex-basis: calc((100% / 12) * 1);
  -ms-flex-preferred-size: calc((100% / 12) * 1);
  flex-basis: calc((100% / 12) * 1);
  max-width: calc((100% / 12) * 1);
}

.c1 .k-Grid__col--offset-1 {
  margin-left: calc((100% / 12) * 1);
}

.c1 .k-Grid__col--2 {
  -webkit-flex-basis: calc((100% / 12) * 2);
  -ms-flex-preferred-size: calc((100% / 12) * 2);
  flex-basis: calc((100% / 12) * 2);
  max-width: calc((100% / 12) * 2);
}

.c1 .k-Grid__col--offset-2 {
  margin-left: calc((100% / 12) * 2);
}

.c1 .k-Grid__col--3 {
  -webkit-flex-basis: calc((100% / 12) * 3);
  -ms-flex-preferred-size: calc((100% / 12) * 3);
  flex-basis: calc((100% / 12) * 3);
  max-width: calc((100% / 12) * 3);
}

.c1 .k-Grid__col--offset-3 {
  margin-left: calc((100% / 12) * 3);
}

.c1 .k-Grid__col--4 {
  -webkit-flex-basis: calc((100% / 12) * 4);
  -ms-flex-preferred-size: calc((100% / 12) * 4);
  flex-basis: calc((100% / 12) * 4);
  max-width: calc((100% / 12) * 4);
}

.c1 .k-Grid__col--offset-4 {
  margin-left: calc((100% / 12) * 4);
}

.c1 .k-Grid__col--5 {
  -webkit-flex-basis: calc((100% / 12) * 5);
  -ms-flex-preferred-size: calc((100% / 12) * 5);
  flex-basis: calc((100% / 12) * 5);
  max-width: calc((100% / 12) * 5);
}

.c1 .k-Grid__col--offset-5 {
  margin-left: calc((100% / 12) * 5);
}

.c1 .k-Grid__col--6 {
  -webkit-flex-basis: calc((100% / 12) * 6);
  -ms-flex-preferred-size: calc((100% / 12) * 6);
  flex-basis: calc((100% / 12) * 6);
  max-width: calc((100% / 12) * 6);
}

.c1 .k-Grid__col--offset-6 {
  margin-left: calc((100% / 12) * 6);
}

.c1 .k-Grid__col--7 {
  -webkit-flex-basis: calc((100% / 12) * 7);
  -ms-flex-preferred-size: calc((100% / 12) * 7);
  flex-basis: calc((100% / 12) * 7);
  max-width: calc((100% / 12) * 7);
}

.c1 .k-Grid__col--offset-7 {
  margin-left: calc((100% / 12) * 7);
}

.c1 .k-Grid__col--8 {
  -webkit-flex-basis: calc((100% / 12) * 8);
  -ms-flex-preferred-size: calc((100% / 12) * 8);
  flex-basis: calc((100% / 12) * 8);
  max-width: calc((100% / 12) * 8);
}

.c1 .k-Grid__col--offset-8 {
  margin-left: calc((100% / 12) * 8);
}

.c1 .k-Grid__col--9 {
  -webkit-flex-basis: calc((100% / 12) * 9);
  -ms-flex-preferred-size: calc((100% / 12) * 9);
  flex-basis: calc((100% / 12) * 9);
  max-width: calc((100% / 12) * 9);
}

.c1 .k-Grid__col--offset-9 {
  margin-left: calc((100% / 12) * 9);
}

.c1 .k-Grid__col--10 {
  -webkit-flex-basis: calc((100% / 12) * 10);
  -ms-flex-preferred-size: calc((100% / 12) * 10);
  flex-basis: calc((100% / 12) * 10);
  max-width: calc((100% / 12) * 10);
}

.c1 .k-Grid__col--offset-10 {
  margin-left: calc((100% / 12) * 10);
}

.c1 .k-Grid__col--11 {
  -webkit-flex-basis: calc((100% / 12) * 11);
  -ms-flex-preferred-size: calc((100% / 12) * 11);
  flex-basis: calc((100% / 12) * 11);
  max-width: calc((100% / 12) * 11);
}

.c1 .k-Grid__col--offset-11 {
  margin-left: calc((100% / 12) * 11);
}

.c1 .k-Grid__col--12 {
  -webkit-flex-basis: calc((100% / 12) * 12);
  -ms-flex-preferred-size: calc((100% / 12) * 12);
  flex-basis: calc((100% / 12) * 12);
  max-width: calc((100% / 12) * 12);
}

.c1 .k-Grid__col--offset-12 {
  margin-left: calc((100% / 12) * 12);
}

@media (min-width:640px) {
  .c0 {
    --container-padding: 2.5rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero {
    padding: 10.3125rem var(--container-padding) 4.375rem;
    gap: 4.0625rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero__background {
    height: 37.5rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__promo {
    padding: 3.125rem var(--container-padding) 1.875rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__page {
    margin: 3.125rem 4.375rem 6.25rem;
    display: grid;
    grid-template-columns: minmax(13.125rem,1fr) minmax(auto,47.5rem) minmax(13.125rem,1fr);
    gap: 4.375rem;
  }
}

@media (max-width:639px) {
  .c0 .k-HeroLayout__sticky.k-HeroLayout__menu {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__menu {
    justify-self: end;
  }

  .c0 .k-HeroLayout__aside {
    justify-self: start;
  }

  .c0 .k-HeroLayout__sticky__inside {
    position: -webkit-sticky;
    position: sticky;
    top: 1.25rem;
    bottom: 1.25rem;
    -webkit-transition: top var(--transition);
    transition: top var(--transition);
  }
}

@media (min-width:25rem) {
  .c1 .k-Grid__col--0-xs {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-xs {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-xs {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-xs {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-xs {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-xs {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-xs {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-xs {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-xs {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-xs {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-xs {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-xs {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-xs {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-xs {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-xs {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-xs {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-xs {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-xs {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-xs {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-xs {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-xs {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-xs {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-xs {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-xs {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-xs {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-xs {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:40rem) {
  .c1 .k-Grid__col--0-s {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-s {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-s {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-s {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-s {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-s {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-s {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-s {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-s {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-s {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-s {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-s {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-s {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-s {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-s {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-s {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-s {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-s {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-s {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-s {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-s {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-s {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-s {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-s {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-s {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-s {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:48rem) {
  .c1 .k-Grid__col--0-m {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-m {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-m {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-m {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-m {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-m {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-m {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-m {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-m {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-m {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-m {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-m {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-m {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-m {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-m {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-m {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-m {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-m {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-m {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-m {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-m {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-m {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-m {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-m {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-m {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-m {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:67.5rem) {
  .c1 .k-Grid__col--0-l {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-l {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-l {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-l {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-l {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-l {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-l {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-l {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-l {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-l {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-l {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-l {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-l {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-l {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-l {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-l {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-l {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-l {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-l {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-l {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-l {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-l {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-l {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-l {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-l {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-l {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:90rem) {
  .c1 .k-Grid__col--0-xl {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-xl {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-xl {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-xl {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-xl {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-xl {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-xl {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-xl {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-xl {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-xl {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-xl {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-xl {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-xl {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-xl {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-xl {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-xl {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-xl {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-xl {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-xl {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-xl {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-xl {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-xl {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-xl {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-xl {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-xl {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-xl {
    margin-left: calc((100% / 12) * 12);
  }
}

<div
  className="c0 k-HeroLayout"
>
  <div
    className="k-HeroLayout__hero"
  >
    <div
      className="k-HeroLayout__hero__background"
    />
    <div
      className="c1 k-Grid k-HeroLayout__hero__block"
    >
      <div
        className="k-Grid__col k-Grid__col--12 k-Grid__col--10-s k-Grid__col--offset-1-s k-Grid__col--8-l k-Grid__col--offset-2-l"
      />
    </div>
    <div
      className="c1 k-Grid k-HeroLayout__hero__block"
    >
      <div
        className="k-Grid__col k-Grid__col--12 k-Grid__col--10-s k-Grid__col--offset-1-s k-Grid__col--8-l k-Grid__col--offset-2-l"
      />
    </div>
  </div>
  <div
    className="k-HeroLayout__promo"
  />
  <div
    className="k-HeroLayout__page"
  >
    <div
      className="k-HeroLayout__menu k-HeroLayout__sticky"
    >
      <div
        className="k-HeroLayout__sticky__inside"
      >
        <p>
          Hello
        </p>
      </div>
    </div>
    <div
      className="k-HeroLayout__loading"
    >
      <div
        className="c2 k-Loader"
      >
        <svg
          className="k-Loader__circle"
          fill="var(--color-grey-900, #222)"
          viewBox="0 0 5 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx={2.5}
            cy={2.5}
            r={5}
          />
        </svg>
        <svg
          className="k-Loader__circle"
          fill="var(--color-grey-900, #222)"
          viewBox="0 0 5 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx={2.5}
            cy={2.5}
            r={5}
          />
        </svg>
        <svg
          className="k-Loader__circle"
          fill="var(--color-grey-900, #222)"
          viewBox="0 0 5 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx={2.5}
            cy={2.5}
            r={5}
          />
        </svg>
      </div>
    </div>
    <div
      className="k-HeroLayout__aside k-HeroLayout__sticky"
    >
      <div
        className="k-HeroLayout__sticky__inside"
      />
    </div>
  </div>
</div>
`;

exports[`<HeroLayout /> compare with snapshot matches with snapshot 1`] = `
.c0 {
  --container-padding: 1.25rem;
  display: block;
}

.c0 .k-HeroLayout__hero {
  position: relative;
  padding: 8.4375rem var(--container-padding) 6.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 1.5625rem;
}

.c0 .k-HeroLayout__hero__background {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 18.75rem;
  background-color: var(--color-grey-000);
}

.c0 .k-HeroLayout__hero__background img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.c0 .k-HeroLayout__hero__background::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50%;
  background: linear-gradient( to bottom,hsla(0deg,0%,100%,0),hsla(0deg,0%,100%,0.3) 20%,hsla(0deg,0%,100%,0.9) 60%,var(--color-grey-000) );
}

.c0 .k-HeroLayout__hero__block {
  position: relative;
  z-index: 2;
  text-align: center;
}

.c0 .k-HeroLayout__promo {
  background-color: var(--color-grey-200);
  padding: 3.125rem var(--container-padding) 3.125rem;
}

.c0 .k-HeroLayout__page {
  margin: 0 var(--container-padding) 3.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 3.125rem;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 .k-Grid__col {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
}

.c1 .k-Grid__col--0 {
  -webkit-flex-basis: calc((100% / 12) * 0);
  -ms-flex-preferred-size: calc((100% / 12) * 0);
  flex-basis: calc((100% / 12) * 0);
  max-width: calc((100% / 12) * 0);
}

.c1 .k-Grid__col--offset-0 {
  margin-left: calc((100% / 12) * 0);
}

.c1 .k-Grid__col--1 {
  -webkit-flex-basis: calc((100% / 12) * 1);
  -ms-flex-preferred-size: calc((100% / 12) * 1);
  flex-basis: calc((100% / 12) * 1);
  max-width: calc((100% / 12) * 1);
}

.c1 .k-Grid__col--offset-1 {
  margin-left: calc((100% / 12) * 1);
}

.c1 .k-Grid__col--2 {
  -webkit-flex-basis: calc((100% / 12) * 2);
  -ms-flex-preferred-size: calc((100% / 12) * 2);
  flex-basis: calc((100% / 12) * 2);
  max-width: calc((100% / 12) * 2);
}

.c1 .k-Grid__col--offset-2 {
  margin-left: calc((100% / 12) * 2);
}

.c1 .k-Grid__col--3 {
  -webkit-flex-basis: calc((100% / 12) * 3);
  -ms-flex-preferred-size: calc((100% / 12) * 3);
  flex-basis: calc((100% / 12) * 3);
  max-width: calc((100% / 12) * 3);
}

.c1 .k-Grid__col--offset-3 {
  margin-left: calc((100% / 12) * 3);
}

.c1 .k-Grid__col--4 {
  -webkit-flex-basis: calc((100% / 12) * 4);
  -ms-flex-preferred-size: calc((100% / 12) * 4);
  flex-basis: calc((100% / 12) * 4);
  max-width: calc((100% / 12) * 4);
}

.c1 .k-Grid__col--offset-4 {
  margin-left: calc((100% / 12) * 4);
}

.c1 .k-Grid__col--5 {
  -webkit-flex-basis: calc((100% / 12) * 5);
  -ms-flex-preferred-size: calc((100% / 12) * 5);
  flex-basis: calc((100% / 12) * 5);
  max-width: calc((100% / 12) * 5);
}

.c1 .k-Grid__col--offset-5 {
  margin-left: calc((100% / 12) * 5);
}

.c1 .k-Grid__col--6 {
  -webkit-flex-basis: calc((100% / 12) * 6);
  -ms-flex-preferred-size: calc((100% / 12) * 6);
  flex-basis: calc((100% / 12) * 6);
  max-width: calc((100% / 12) * 6);
}

.c1 .k-Grid__col--offset-6 {
  margin-left: calc((100% / 12) * 6);
}

.c1 .k-Grid__col--7 {
  -webkit-flex-basis: calc((100% / 12) * 7);
  -ms-flex-preferred-size: calc((100% / 12) * 7);
  flex-basis: calc((100% / 12) * 7);
  max-width: calc((100% / 12) * 7);
}

.c1 .k-Grid__col--offset-7 {
  margin-left: calc((100% / 12) * 7);
}

.c1 .k-Grid__col--8 {
  -webkit-flex-basis: calc((100% / 12) * 8);
  -ms-flex-preferred-size: calc((100% / 12) * 8);
  flex-basis: calc((100% / 12) * 8);
  max-width: calc((100% / 12) * 8);
}

.c1 .k-Grid__col--offset-8 {
  margin-left: calc((100% / 12) * 8);
}

.c1 .k-Grid__col--9 {
  -webkit-flex-basis: calc((100% / 12) * 9);
  -ms-flex-preferred-size: calc((100% / 12) * 9);
  flex-basis: calc((100% / 12) * 9);
  max-width: calc((100% / 12) * 9);
}

.c1 .k-Grid__col--offset-9 {
  margin-left: calc((100% / 12) * 9);
}

.c1 .k-Grid__col--10 {
  -webkit-flex-basis: calc((100% / 12) * 10);
  -ms-flex-preferred-size: calc((100% / 12) * 10);
  flex-basis: calc((100% / 12) * 10);
  max-width: calc((100% / 12) * 10);
}

.c1 .k-Grid__col--offset-10 {
  margin-left: calc((100% / 12) * 10);
}

.c1 .k-Grid__col--11 {
  -webkit-flex-basis: calc((100% / 12) * 11);
  -ms-flex-preferred-size: calc((100% / 12) * 11);
  flex-basis: calc((100% / 12) * 11);
  max-width: calc((100% / 12) * 11);
}

.c1 .k-Grid__col--offset-11 {
  margin-left: calc((100% / 12) * 11);
}

.c1 .k-Grid__col--12 {
  -webkit-flex-basis: calc((100% / 12) * 12);
  -ms-flex-preferred-size: calc((100% / 12) * 12);
  flex-basis: calc((100% / 12) * 12);
  max-width: calc((100% / 12) * 12);
}

.c1 .k-Grid__col--offset-12 {
  margin-left: calc((100% / 12) * 12);
}

@media (min-width:640px) {
  .c0 {
    --container-padding: 2.5rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero {
    padding: 10.3125rem var(--container-padding) 4.375rem;
    gap: 4.0625rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__hero__background {
    height: 37.5rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__promo {
    padding: 3.125rem var(--container-padding) 1.875rem;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__page {
    margin: 3.125rem 4.375rem 6.25rem;
    display: grid;
    grid-template-columns: minmax(13.125rem,1fr) minmax(auto,47.5rem) minmax(13.125rem,1fr);
    gap: 4.375rem;
  }
}

@media (max-width:639px) {
  .c0 .k-HeroLayout__sticky.k-HeroLayout__menu {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
  }
}

@media (min-width:1080px) {
  .c0 .k-HeroLayout__menu {
    justify-self: end;
  }

  .c0 .k-HeroLayout__aside {
    justify-self: start;
  }

  .c0 .k-HeroLayout__sticky__inside {
    position: -webkit-sticky;
    position: sticky;
    top: 1.25rem;
    bottom: 1.25rem;
    -webkit-transition: top var(--transition);
    transition: top var(--transition);
  }
}

@media (min-width:25rem) {
  .c1 .k-Grid__col--0-xs {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-xs {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-xs {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-xs {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-xs {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-xs {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-xs {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-xs {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-xs {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-xs {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-xs {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-xs {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-xs {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-xs {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-xs {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-xs {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-xs {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-xs {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-xs {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-xs {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-xs {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-xs {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-xs {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-xs {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-xs {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-xs {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:40rem) {
  .c1 .k-Grid__col--0-s {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-s {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-s {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-s {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-s {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-s {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-s {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-s {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-s {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-s {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-s {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-s {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-s {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-s {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-s {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-s {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-s {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-s {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-s {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-s {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-s {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-s {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-s {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-s {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-s {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-s {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:48rem) {
  .c1 .k-Grid__col--0-m {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-m {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-m {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-m {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-m {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-m {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-m {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-m {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-m {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-m {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-m {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-m {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-m {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-m {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-m {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-m {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-m {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-m {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-m {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-m {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-m {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-m {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-m {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-m {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-m {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-m {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:67.5rem) {
  .c1 .k-Grid__col--0-l {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-l {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-l {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-l {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-l {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-l {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-l {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-l {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-l {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-l {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-l {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-l {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-l {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-l {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-l {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-l {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-l {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-l {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-l {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-l {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-l {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-l {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-l {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-l {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-l {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-l {
    margin-left: calc((100% / 12) * 12);
  }
}

@media (min-width:90rem) {
  .c1 .k-Grid__col--0-xl {
    -webkit-flex-basis: calc((100% / 12) * 0);
    -ms-flex-preferred-size: calc((100% / 12) * 0);
    flex-basis: calc((100% / 12) * 0);
    max-width: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--offset-0-xl {
    margin-left: calc((100% / 12) * 0);
  }

  .c1 .k-Grid__col--1-xl {
    -webkit-flex-basis: calc((100% / 12) * 1);
    -ms-flex-preferred-size: calc((100% / 12) * 1);
    flex-basis: calc((100% / 12) * 1);
    max-width: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--offset-1-xl {
    margin-left: calc((100% / 12) * 1);
  }

  .c1 .k-Grid__col--2-xl {
    -webkit-flex-basis: calc((100% / 12) * 2);
    -ms-flex-preferred-size: calc((100% / 12) * 2);
    flex-basis: calc((100% / 12) * 2);
    max-width: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--offset-2-xl {
    margin-left: calc((100% / 12) * 2);
  }

  .c1 .k-Grid__col--3-xl {
    -webkit-flex-basis: calc((100% / 12) * 3);
    -ms-flex-preferred-size: calc((100% / 12) * 3);
    flex-basis: calc((100% / 12) * 3);
    max-width: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--offset-3-xl {
    margin-left: calc((100% / 12) * 3);
  }

  .c1 .k-Grid__col--4-xl {
    -webkit-flex-basis: calc((100% / 12) * 4);
    -ms-flex-preferred-size: calc((100% / 12) * 4);
    flex-basis: calc((100% / 12) * 4);
    max-width: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--offset-4-xl {
    margin-left: calc((100% / 12) * 4);
  }

  .c1 .k-Grid__col--5-xl {
    -webkit-flex-basis: calc((100% / 12) * 5);
    -ms-flex-preferred-size: calc((100% / 12) * 5);
    flex-basis: calc((100% / 12) * 5);
    max-width: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--offset-5-xl {
    margin-left: calc((100% / 12) * 5);
  }

  .c1 .k-Grid__col--6-xl {
    -webkit-flex-basis: calc((100% / 12) * 6);
    -ms-flex-preferred-size: calc((100% / 12) * 6);
    flex-basis: calc((100% / 12) * 6);
    max-width: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--offset-6-xl {
    margin-left: calc((100% / 12) * 6);
  }

  .c1 .k-Grid__col--7-xl {
    -webkit-flex-basis: calc((100% / 12) * 7);
    -ms-flex-preferred-size: calc((100% / 12) * 7);
    flex-basis: calc((100% / 12) * 7);
    max-width: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--offset-7-xl {
    margin-left: calc((100% / 12) * 7);
  }

  .c1 .k-Grid__col--8-xl {
    -webkit-flex-basis: calc((100% / 12) * 8);
    -ms-flex-preferred-size: calc((100% / 12) * 8);
    flex-basis: calc((100% / 12) * 8);
    max-width: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--offset-8-xl {
    margin-left: calc((100% / 12) * 8);
  }

  .c1 .k-Grid__col--9-xl {
    -webkit-flex-basis: calc((100% / 12) * 9);
    -ms-flex-preferred-size: calc((100% / 12) * 9);
    flex-basis: calc((100% / 12) * 9);
    max-width: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--offset-9-xl {
    margin-left: calc((100% / 12) * 9);
  }

  .c1 .k-Grid__col--10-xl {
    -webkit-flex-basis: calc((100% / 12) * 10);
    -ms-flex-preferred-size: calc((100% / 12) * 10);
    flex-basis: calc((100% / 12) * 10);
    max-width: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--offset-10-xl {
    margin-left: calc((100% / 12) * 10);
  }

  .c1 .k-Grid__col--11-xl {
    -webkit-flex-basis: calc((100% / 12) * 11);
    -ms-flex-preferred-size: calc((100% / 12) * 11);
    flex-basis: calc((100% / 12) * 11);
    max-width: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--offset-11-xl {
    margin-left: calc((100% / 12) * 11);
  }

  .c1 .k-Grid__col--12-xl {
    -webkit-flex-basis: calc((100% / 12) * 12);
    -ms-flex-preferred-size: calc((100% / 12) * 12);
    flex-basis: calc((100% / 12) * 12);
    max-width: calc((100% / 12) * 12);
  }

  .c1 .k-Grid__col--offset-12-xl {
    margin-left: calc((100% / 12) * 12);
  }
}

<div
  className="c0 k-HeroLayout"
>
  <div
    className="k-HeroLayout__hero"
  >
    <div
      className="k-HeroLayout__hero__background"
    />
    <div
      className="c1 k-Grid k-HeroLayout__hero__block"
    >
      <div
        className="k-Grid__col k-Grid__col--12 k-Grid__col--10-s k-Grid__col--offset-1-s k-Grid__col--8-l k-Grid__col--offset-2-l"
      />
    </div>
    <div
      className="c1 k-Grid k-HeroLayout__hero__block"
    >
      <div
        className="k-Grid__col k-Grid__col--12 k-Grid__col--10-s k-Grid__col--offset-1-s k-Grid__col--8-l k-Grid__col--offset-2-l"
      />
    </div>
  </div>
  <div
    className="k-HeroLayout__promo"
  />
  <div
    className="k-HeroLayout__page"
  >
    <div
      className="k-HeroLayout__menu k-HeroLayout__sticky"
    >
      <div
        className="k-HeroLayout__sticky__inside"
      >
        <p>
          Hello
        </p>
      </div>
    </div>
    <div
      className="k-HeroLayout__content"
    >
      Content
    </div>
    <div
      className="k-HeroLayout__aside k-HeroLayout__sticky"
    >
      <div
        className="k-HeroLayout__sticky__inside"
      />
    </div>
  </div>
</div>
`;
